--- a/SchoolManagementSystemBO/SchoolManagementSystemBO.csproj
+++ b/SchoolManagementSystemBO/SchoolManagementSystemBO.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SessionEntryBO.cs" />
+    <Compile Include="SrvSessionEntryBO.cs" />
     <Compile Include="SrvClassInfoBO.cs" />
     <Compile Include="CommonBO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
